--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -12,7 +12,7 @@
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Вы ещё не задали парольную фразу!</string>
   <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
     <item quantity="one">%dсообщение в разговоре</item>
-    <item quantity="few">%dсообщений в разговоре</item>
+    <item quantity="few">%dсообщения в разговоре</item>
     <item quantity="many">%dсообщений в разговоре</item>
     <item quantity="other">%dсообщений в разговоре</item>
   </plurals>
@@ -46,7 +46,7 @@
   <!--AppProtectionPreferenceFragment-->
   <plurals name="AppProtectionPreferenceFragment_minutes">
     <item quantity="one">%dминута</item>
-    <item quantity="few">%dминут</item>
+    <item quantity="few">%dминуты</item>
     <item quantity="many">%dминут</item>
     <item quantity="other">%dминут</item>
   </plurals>
@@ -55,6 +55,7 @@
   <string name="DraftDatabase_Draft_audio_snippet">(аудио)</string>
   <string name="DraftDatabase_Draft_video_snippet">(видео)</string>
   <string name="DraftDatabase_Draft_location_snippet">(место)</string>
+  <string name="DraftDatabase_Draft_quote_snippet">(ответ)</string>
   <!--AttchmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Не найдено приложение для выбора медиа-файлов.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal требуется разрешение на доступ к хранилищу для возможности прирепления фото, видео и аудио, но оно было вами отклонено. Чтобы предоставить разрешение вручную, перейдите Настройки, выберите Приложения, найдите Signal, затем выберите Разрешения и включите Хранилище.</string>
@@ -87,6 +88,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Сообщение %s</string>
   <string name="ContactsDatabase_signal_call_s">Позвонить через Signal на %s</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">Не доставлено</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Получено сообщение обмена ключами. Нажмите, чтобы его обработать.</string>
@@ -517,6 +520,15 @@
   <string name="RingtonePreference_alarm_sound_default">Звуковой сигнал по умолчанию</string>
   <string name="RingtonePreference_add_ringtone_text">Добавить мелодию звонка</string>
   <string name="RingtonePreference_unable_to_add_ringtone">Не удается добавить мелодию звонка</string>
+  <!--Search-->
+  <string name="SearchFragment_no_results">Результаты не найдены для \'%s\'</string>
+  <string name="SearchFragment_header_contacts">Контакты</string>
+  <string name="SearchFragment_header_messages">Сообщения</string>
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">Пригласить в Signal</string>
+  <string name="SharedContactDetailsActivity_invite_message">Давайте перейдём на Signal: %1$s</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">Пригласить в Signal</string>
   <!--Slide-->
   <string name="Slide_image">Изображение</string>
   <string name="Slide_audio">Аудио</string>
@@ -624,6 +636,7 @@
   <string name="MessageNotifier_reply">Ответить</string>
   <string name="MessageNotifier_pending_signal_messages">Неполученные сообщения</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">У вас есть неполученные сообщения в Signal. Нажмите, чтобы открыть приложение и получить их.</string>
+  <string name="MessageNotifier_unknown_contact_message">Контакт</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Быстрые ответы недоступны, когда Signal заблокирован!</string>
@@ -1065,6 +1078,7 @@
   <string name="conversation_context__menu_delete_message">Удалить сообщение</string>
   <string name="conversation_context__menu_forward_message">Переслать сообщение</string>
   <string name="conversation_context__menu_resend_message">Отправить заново</string>
+  <string name="conversation_context__menu_reply_to_message">Ответ на сообщение</string>
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Сохранить вложение</string>
   <!--conversation_expiring_off-->
@@ -1205,6 +1219,7 @@
   <string name="RegistrationActivity_verify_s">Подтвердить %s</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Пожалуйста, введите проверочный код, отправленный на %s.</string>
   <string name="RegistrationActivity_wrong_number">Неправильный номер?</string>
+  <string name="RegistrationActivity_call_me_instead">Позвонить мне вместо этого</string>
   <string name="RegistrationActivity_available_in">Доступно в:\u0020</string>
   <string name="BackupUtil_never">Никогда</string>
   <string name="BackupUtil_unknown">Неизвестен</string>
