--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -49,6 +49,7 @@
   <string name="DraftDatabase_Draft_audio_snippet">(àudio)</string>
   <string name="DraftDatabase_Draft_video_snippet">(vídeo)</string>
   <string name="DraftDatabase_Draft_location_snippet">(ubicació)</string>
+  <string name="DraftDatabase_Draft_quote_snippet">(reposta)</string>
   <!--AttchmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">No s\'ha trobat cap aplicació compatible.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">El Signal necessita el permís de l\'emmagatzematge per tal d\'adjuntar fotografies, vídeos o àudio, però s\'ha denegat permanentment. Si us plau, continueu cap al menú de configuració de l\'aplicació, seleccioneu Permisos i habiliteu-hi l\'emmagatzematge.</string>
@@ -81,6 +82,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Missatge %s</string>
   <string name="ContactsDatabase_signal_call_s">Trucada del Signal %s</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">No s\'ha enviat</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">S\'ha rebut el missatge de l\'intercanvi de la clau, toqueu per a processar-lo.</string>
@@ -485,6 +488,15 @@ especificat (%s) no és vàlid.</string>
   <string name="RingtonePreference_alarm_sound_default">So d\'alarma per defecte</string>
   <string name="RingtonePreference_add_ringtone_text">Afegeix-hi un to</string>
   <string name="RingtonePreference_unable_to_add_ringtone">No es pot afegir un to personalitzat</string>
+  <!--Search-->
+  <string name="SearchFragment_no_results">No s\'ha trobat cap resultat per a «%s»</string>
+  <string name="SearchFragment_header_contacts">Contactes</string>
+  <string name="SearchFragment_header_messages">Missatges</string>
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">Convida al Signal</string>
+  <string name="SharedContactDetailsActivity_invite_message">Canviem al Signal: %1$s</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">Convida al Signal</string>
   <!--Slide-->
   <string name="Slide_image">Imatge</string>
   <string name="Slide_audio">Àudio</string>
@@ -590,6 +602,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="MessageNotifier_reply">Respon</string>
   <string name="MessageNotifier_pending_signal_messages">Missatges del Signal pendents</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Teniu missatges del Signal pendents, toqueu per obrir-lo i recuperar-los</string>
+  <string name="MessageNotifier_unknown_contact_message">Contacte</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">La resposta ràpida no és disponible si el Signal està blocat!</string>
@@ -1015,6 +1028,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="conversation_context__menu_delete_message">Elimina el missatge</string>
   <string name="conversation_context__menu_forward_message">Reenvia el missatge</string>
   <string name="conversation_context__menu_resend_message">Torna a enviar el missatge</string>
+  <string name="conversation_context__menu_reply_to_message">Respon el missatge</string>
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Desa l\'adjunt</string>
   <!--conversation_expiring_off-->
