--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -77,6 +77,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Besked %s</string>
   <string name="ContactsDatabase_signal_call_s">Signal opkald %s</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">Ikke sendt</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Udvekslingsnøgle er modtaget. Klik for at fortsætte</string>
@@ -451,6 +453,14 @@ indtastede (%s) er ugyldigt.
   <string name="RingtonePreference_notification_sound_default">Standard notifikationslyd</string>
   <string name="RingtonePreference_alarm_sound_default">Standard alarmlyd</string>
   <string name="RingtonePreference_add_ringtone_text">Tilføj ringetone</string>
+  <!--Search-->
+  <string name="SearchFragment_header_contacts">Kontakter</string>
+  <string name="SearchFragment_header_messages">Beskeder</string>
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">Invitér til Signal</string>
+  <string name="SharedContactDetailsActivity_invite_message">Lad os bruge Signal: %1$s</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">Invitér til Signal</string>
   <!--Slide-->
   <string name="Slide_image">Billede</string>
   <string name="Slide_audio">Lyd</string>
@@ -550,6 +560,7 @@ Modtog en nøgle-besked for en ugyldig protokol-version.
   <string name="MessageNotifier_reply">Svar</string>
   <string name="MessageNotifier_pending_signal_messages">Afventende Signal beskeder</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Du har afventende Signal beskeder, tryk for at åbne og modtage</string>
+  <string name="MessageNotifier_unknown_contact_message">Kontakt</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Hurtig-svar utilgængelig når Signal er låst!</string>
