--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -49,6 +49,7 @@
   <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
   <string name="DraftDatabase_Draft_video_snippet">(vídeo)</string>
   <string name="DraftDatabase_Draft_location_snippet">(localización)</string>
+  <string name="DraftDatabase_Draft_quote_snippet">(resposta)</string>
   <!--AttchmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Non se atopa unha app para seleccionar contido multimedia.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal require permiso de almacenamento para poder anexar fotografías, vídeos ou ficheiros de audio, pero este foi denegado de forma permanente. Vai aos axustes da aplicación, selecciona \"Permisos\" e activa \"Almacenamento\".</string>
@@ -81,6 +82,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Mensaxe %s</string>
   <string name="ContactsDatabase_signal_call_s">Chamada Signal %s</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">Sen entregar</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Recibida a mensaxe de intercambio de chaves; toca para continuar.</string>
@@ -491,6 +494,15 @@
   <string name="RingtonePreference_alarm_sound_default">Son de alarma predefinido</string>
   <string name="RingtonePreference_add_ringtone_text">Engadir ton</string>
   <string name="RingtonePreference_unable_to_add_ringtone">Non é posible engadir un ton personalizado</string>
+  <!--Search-->
+  <string name="SearchFragment_no_results">Ningún resultado atopado para \'%s\'</string>
+  <string name="SearchFragment_header_contacts">Contactos</string>
+  <string name="SearchFragment_header_messages">Mensaxes</string>
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">Convidar a Signal</string>
+  <string name="SharedContactDetailsActivity_invite_message">Imos cambiar a Signal: %1$s</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">Convidar a Signal</string>
   <!--Slide-->
   <string name="Slide_image">Imaxe</string>
   <string name="Slide_audio">Audio</string>
@@ -598,6 +610,7 @@
   <string name="MessageNotifier_reply">Responder</string>
   <string name="MessageNotifier_pending_signal_messages">Mensaxes de Signal pendentes</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Tes mensaxes de Signal pendentes, toca para abrir e recuperalas</string>
+  <string name="MessageNotifier_unknown_contact_message">Contacto</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">A resposta rápida non está dispoñible cando Signal está bloqueado!</string>
@@ -1023,6 +1036,7 @@
   <string name="conversation_context__menu_delete_message">Borrar mensaxe</string>
   <string name="conversation_context__menu_forward_message">Reenviar mensaxe</string>
   <string name="conversation_context__menu_resend_message">Reenviar mensaxe</string>
+  <string name="conversation_context__menu_reply_to_message">Responder a mensaxe</string>
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Gardar anexo</string>
   <!--conversation_expiring_off-->
@@ -1156,10 +1170,13 @@
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal require permiso de almacenamento para poder crear copias de seguranza, pero este foi denegado de forma permanente. Vai aos axustes da aplicación, selecciona \"Permisos\" e activa \"Almacenamento\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Última copia de seguranza: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">En curso</string>
+  <string name="LocalBackupJob_creating_backup">Creando copia de seguranza...</string>
   <string name="ProgressPreference_d_messages_so_far">%d mensaxes ata o momento</string>
   <string name="RegistrationActivity_verify_s">Comprobar %s</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Por favor, insire o código de verificación enviado a %s.</string>
   <string name="RegistrationActivity_wrong_number">Número incorrecto?</string>
+  <string name="RegistrationActivity_call_me_instead">Chamarme en cambio</string>
+  <string name="RegistrationActivity_available_in">Dispoñible en:\u0020</string>
   <string name="BackupUtil_never">Nunca</string>
   <string name="BackupUtil_unknown">Descoñecido</string>
   <string name="prompt_passphrase_activity__unlock_signal">Desbloquear Signal</string>
