--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -69,6 +69,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Poruka %s</string>
   <string name="ContactsDatabase_signal_call_s">Signal poziv %s</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">Nije isporučeno</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Poruka za razmjenu ključeva je primljena, pritisnite da biste nastavili.</string>
@@ -454,6 +456,14 @@ telefona</string>
   <string name="RingtonePreference_alarm_sound_default">Zadani zvuk alarma</string>
   <string name="RingtonePreference_add_ringtone_text">Dodaj melodiju</string>
   <string name="RingtonePreference_unable_to_add_ringtone">Nije moguće dodati prilagođenu melodiju</string>
+  <!--Search-->
+  <string name="SearchFragment_header_contacts">Kontakti</string>
+  <string name="SearchFragment_header_messages">Poruke</string>
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">Pozovi u Signal</string>
+  <string name="SharedContactDetailsActivity_invite_message">Prebacimo se na Signal %1$s</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">Pozovi u Signal</string>
   <!--Slide-->
   <string name="Slide_image">Slika</string>
   <string name="Slide_audio">Audio</string>
@@ -551,6 +561,7 @@ Primljena poruka razmjene ključeva za pogrešnu inačicu protokola.</string>
   <string name="MessageNotifier_reply">Odgovori</string>
   <string name="MessageNotifier_pending_signal_messages">Signal poruke na čekanju</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Imate Signal poruka na čekanju, pritisnite kako biste ih otvorili i preuzeli</string>
+  <string name="MessageNotifier_unknown_contact_message">Kontakt</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Brzi odgovor nije dostupan kada je Signal zaključan!</string>
