--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -49,6 +49,7 @@
   <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(posizione)</string>
+  <string name="DraftDatabase_Draft_quote_snippet">(risposta)</string>
   <!--AttchmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Impossibile trovare un\'app per selezionare il file.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal richiede l\'autorizzazione all\'accesso della memoria per allegare foto, video o audio, ma è stata negata in modo permanente. Si prega di continuare con il menu delle impostazioni dell\'app, selezionare \"Autorizzazioni\" e abilitare \"Archiviazione\".</string>
@@ -81,6 +82,18 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Messaggio %s</string>
   <string name="ContactsDatabase_signal_call_s">Chiamata Signal %s</string>
+  <!--ContactNameEditActivity-->
+  <string name="ContactNameEditActivity_given_name">Nome</string>
+  <string name="ContactNameEditActivity_family_name">Cognome</string>
+  <string name="ContactNameEditActivity_prefix">Prefisso</string>
+  <string name="ContactNameEditActivity_suffix">Suffisso</string>
+  <string name="ContactNameEditActivity_middle_name">Secondo nome</string>
+  <!--ContactShareEditActivity-->
+  <string name="ContactShareEditActivity_type_home">Casa</string>
+  <string name="ContactShareEditActivity_type_mobile">Cellulare</string>
+  <string name="ContactShareEditActivity_type_work">Lavoro</string>
+  <string name="ContactShareEditActivity_type_missing">Altro</string>
+  <string name="ContactShareEditActivity_invalid_contact">Il contatto selezionato non è valido</string>
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">Non consegnato</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Ricevuto un messaggio con chiave di scambio, tocca per processarlo</string>
@@ -132,6 +145,7 @@
   <string name="ConversationActivity_to_capture_photos_and_video_allow_signal_access_to_the_camera">Per poter catturare foto e video, permetti a Signal di accedere alla fotocamera del tuo dispositivo</string>
   <string name="ConversationActivity_signal_needs_the_camera_permission_to_take_photos_or_video">Signal richiede l\'autorizzazione all\'uso della fotocamera per scattare foto o registrare video, ma è stata negata in modo permanente. Si prega di continuare al menu delle impostazioni dell\'app, selezionare \"Autorizzazioni\" e abilitare \"Fotocamera\".</string>
   <string name="ConversationActivity_signal_needs_camera_permissions_to_take_photos_or_video">Signal richiede l\'autorizzazione all\'uso della fotocamera per scattare foto o registrare video</string>
+  <string name="ConversationActivity_quoted_contact_message">%1$s %2$s</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d messaggio non letto</item>
@@ -484,6 +498,27 @@ proprio numero di telefono</string>
   <string name="RingtonePreference_alarm_sound_default">Suono di avviso predefinito</string>
   <string name="RingtonePreference_add_ringtone_text">Aggiungi suoneria</string>
   <string name="RingtonePreference_unable_to_add_ringtone">Impossibile aggiungere suoneria personalizzata</string>
+  <!--Search-->
+  <string name="SearchFragment_begin_searching">Inizia a digitare per cercare conversazioni, messaggi e contatti.</string>
+  <string name="SearchFragment_no_results">Nessun risultato trovato per \'%s\'</string>
+  <string name="SearchFragment_header_conversations">Conversazioni</string>
+  <string name="SearchFragment_header_contacts">Contatti</string>
+  <string name="SearchFragment_header_messages">Messaggi</string>
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_add_to_contacts">Aggiungi ai contatti</string>
+  <string name="SharedContactDetailsActivity_invite_to_signal">Invita su Signal</string>
+  <string name="SharedContactDetailsActivity_invite_message">Passiamo a Signal: %1$s</string>
+  <string name="SharedContactDetailsActivity_new_contact_success">Contatto aggiunto.</string>
+  <string name="SharedContactDetailsActivity_new_contact_failure">Recupero del contatto fallito</string>
+  <string name="SharedContactDetailsActivity_updated_contact_success">Contatto aggiornato.</string>
+  <string name="SharedContactDetailsActivity_updated_contact_failure">Errore nella modifica del contatto</string>
+  <string name="SharedContactDetailsActivity_initialization_failure">Errore nella lettura del contatto</string>
+  <string name="SharedContactDetailsActivity_add_as_new_contact">Aggiungi come nuovo contatto</string>
+  <string name="SharedContactDetailsActivity_add_to_existing_contact">Aggiungi ad un contatto esistente</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_add_to_contacts">Aggiungi ai contatti</string>
+  <string name="SharedContactView_invite_to_signal">Invita su Signal</string>
+  <string name="SharedContactView_message">Messaggio Signal</string>
   <!--Slide-->
   <string name="Slide_image">Immagini</string>
   <string name="Slide_audio">Audio</string>
@@ -590,6 +625,8 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="MessageNotifier_reply">Rispondi</string>
   <string name="MessageNotifier_pending_signal_messages">Messaggi Signal in attesa</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Hai messaggi Signal in attesa, tocca per aprire e ricevere</string>
+  <string name="MessageNotifier_contact_message">%1$s %2$s</string>
+  <string name="MessageNotifier_unknown_contact_message">Contatto</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Risposta veloce non disponibile quando Signal è bloccato!</string>
@@ -778,6 +815,7 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="import_fragment__import_a_plaintext_backup_file">Importa un file dalla memoria. Compatibile con \'SMS Backup &amp; Restore\'</string>
   <!--load_more_header-->
   <string name="load_more_header__see_full_conversation">Vedi tutta la conversazione</string>
+  <string name="load_more_header__loading">Caricamento</string>
   <!--media_overview_activity-->
   <string name="media_overview_activity__no_media">Nessun file multimediale</string>
   <!--message_recipients_list_item-->
@@ -818,6 +856,7 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Chiamata Signal</string>
   <string name="redphone_call_controls__mute">Togli l\'audio</string>
+  <string name="redphone_call_controls__flip_camera_rear">Cambia fotocamera</string>
   <string name="redphone_call_controls__signal_call">Chiamata Signal</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">NUMERO DI TELEFONO</string>
@@ -1015,6 +1054,7 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="conversation_context__menu_delete_message">Cancella messaggio</string>
   <string name="conversation_context__menu_forward_message">Inoltra messaggio</string>
   <string name="conversation_context__menu_resend_message">Rinvia il messaggio</string>
+  <string name="conversation_context__menu_reply_to_message">Rispondi al messaggio</string>
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Salva allegato</string>
   <!--conversation_expiring_off-->
