--- a/res/values-lg/strings.xml
+++ b/res/values-lg/strings.xml
@@ -54,6 +54,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Obubaka %s</string>
   <string name="ContactsDatabase_signal_call_s">Mayengo g\'amasimu %s</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">Tekifunikidwa</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Key  exchange message efuniddwa, kwata okugenda mumaso</string>
@@ -330,6 +332,12 @@ gy\'olonze (%s) sintuufu.</string>
   <string name="RegistrationService_signal_registration_has_encountered_a_problem">okwewandisa kufunyemu obuzibu</string>
   <!--RingtonePreference-->
   <string name="RingtonePreference_ringtone_silent">tekuli</string>
+  <!--Search-->
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">Muyite ku Signal</string>
+  <string name="SharedContactDetailsActivity_invite_message">Katudde ku Signal: %1$s</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">Muyite ku Signal</string>
   <!--Slide-->
   <string name="Slide_image">ekifaananyi</string>
   <string name="Slide_audio">edoboozi</string>
@@ -396,6 +404,7 @@ gy\'olonze (%s) sintuufu.</string>
   <string name="MessageNotifier_mark_read">lamba osome</string>
   <string name="MessageNotifier_media_message">obubaka bwemikutu</string>
   <string name="MessageNotifier_reply">ddamu</string>
+  <string name="MessageNotifier_unknown_contact_message">Contact</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">okudamu okwangu tekubawo nga amayengo gasibidwa</string>
