--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -49,6 +49,7 @@
   <string name="DraftDatabase_Draft_audio_snippet">(lyd)</string>
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(sted)</string>
+  <string name="DraftDatabase_Draft_quote_snippet">(svar)</string>
   <!--AttchmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Fant ingen programmer for valg av medier.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal krever tillatelse fra systemet for å kunne legge til bilder, videoer eller lyd, men du har valgt å avslå dette permanent. Gå til «Apper»-menyen på systemet og slå på tillatelsen «Lagring».</string>
@@ -81,6 +82,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Melding %s</string>
   <string name="ContactsDatabase_signal_call_s">Signal-anrop %s</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">Ikke levert</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Melding for nøkkelutveksling mottatt. Trykk for å behandle.</string>
@@ -486,6 +489,15 @@ skrev inn (%s) er ugyldig.</string>
   <string name="RingtonePreference_alarm_sound_default">Forvalgt alarmlyd</string>
   <string name="RingtonePreference_add_ringtone_text">Legg til ringetone</string>
   <string name="RingtonePreference_unable_to_add_ringtone">Klarte ikke å legge til selvvalgt ringetone</string>
+  <!--Search-->
+  <string name="SearchFragment_no_results">Søket «1%s» ga ingen treff.</string>
+  <string name="SearchFragment_header_contacts">Kontakter</string>
+  <string name="SearchFragment_header_messages">Meldinger</string>
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">Inviter til Signal</string>
+  <string name="SharedContactDetailsActivity_invite_message">La oss bytte til Signal. %1$s</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">Inviter til Signal</string>
   <!--Slide-->
   <string name="Slide_image">Bilde</string>
   <string name="Slide_audio">Lyd</string>
@@ -591,6 +603,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="MessageNotifier_reply">Svar</string>
   <string name="MessageNotifier_pending_signal_messages">Venter Signalmeldinger </string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Du har ventende Signalmeldinger, trykk for å åpne og hente</string>
+  <string name="MessageNotifier_unknown_contact_message">Kontakt</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Hurtigsvar er utilgjengelig når Signal er låst.</string>
@@ -939,9 +952,9 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="preferences__magenta">Magenta</string>
   <string name="preferences__white">Hvit</string>
   <string name="preferences__none">Ingen</string>
-  <string name="preferences__fast">Fort</string>
+  <string name="preferences__fast">Raskt</string>
   <string name="preferences__normal">Normal</string>
-  <string name="preferences__slow">Langsom</string>
+  <string name="preferences__slow">Langsomt</string>
   <string name="preferences__advanced">Avansert</string>
   <string name="preferences__privacy">Personvern</string>
   <string name="preferences__mms_user_agent">MMS-brukeragent</string>
@@ -969,18 +982,18 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="preferences__signal_messages_and_calls">Signal-meldinger og -samtaler</string>
   <string name="preferences__free_private_messages_and_calls">Gratis privatmeldinger og -samtaler til Signal-brukere</string>
   <string name="preferences__submit_debug_log">Send feilsøkingslogg</string>
-  <string name="preferences__support_wifi_calling">«WiFi-anrop»-tilbakefallsmodus</string>
-  <string name="preferences__enable_if_your_device_supports_sms_mms_delivery_over_wifi">Bruk dette hvis enheten leverer SMS / MMS over WiFi og «WiFi-anrop» er slått på)</string>
+  <string name="preferences__support_wifi_calling">«Wi-Fi-anrop»-tilbakefallsmodus</string>
+  <string name="preferences__enable_if_your_device_supports_sms_mms_delivery_over_wifi">Bruk dette hvis enheten leverer SMS / MMS via Wi-Fi (og «Wi-Fi-anrop» er slått på)</string>
   <string name="preferences__incognito_keyboard">Inkognito-tastatur</string>
   <string name="preferences__read_receipts">Lesebekreftelser</string>
-  <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">Hvis du har slått av lesebekreftelser, kan du ikke se lesebekreftelser fra andre.</string>
+  <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">Hvis du slår av lesebekreftelser, får du heller ikke se lesebekreftelser fra andre.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Be tastatur om å slå av lærefunksjon</string>
   <string name="preferences_app_protection__blocked_contacts">Blokkerte kontakter</string>
   <string name="preferences_chats__when_using_mobile_data">Ved bruk av mobildata</string>
-  <string name="preferences_chats__when_using_wifi">Ved bruk av WiFi</string>
+  <string name="preferences_chats__when_using_wifi">Ved bruk av Wi-Fi</string>
   <string name="preferences_chats__when_roaming">I fremmednett</string>
   <string name="preferences_chats__media_auto_download">Automatisk nedlasting av medier</string>
-  <string name="preferences_chats__message_trimming">Meldingsforkortelse</string>
+  <string name="preferences_chats__message_trimming">Automatisk sletting</string>
   <string name="preferences_advanced__use_system_emoji">Bruk systemets emoji</string>
   <string name="preferences_advanced__disable_signal_built_in_emoji_support">Slå av innebygd emoji-støtte i Signal</string>
   <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">La alle anrop gå via Signal-tjeneren for å unngå å avsløre telefonens IP-adresse til kontakten. Dette reduserer samtalekvaliteten.</string>
@@ -1016,6 +1029,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="conversation_context__menu_delete_message">Slett melding</string>
   <string name="conversation_context__menu_forward_message">Videresend melding</string>
   <string name="conversation_context__menu_resend_message">Send melding på nytt</string>
+  <string name="conversation_context__menu_reply_to_message">Svar på melding</string>
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Lagre vedlegg</string>
   <!--conversation_expiring_off-->
@@ -1128,7 +1142,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="registration_activity__restore_backup">Gjenopprett fra sikkerhetskopi</string>
   <string name="registration_activity__skip">Hopp over</string>
   <string name="registration_activity__register">Registrer</string>
-  <string name="preferences_chats__chat_backups">Samtale-sikkerhetskopier</string>
+  <string name="preferences_chats__chat_backups">Sikkerhetskopi av samtaler</string>
   <string name="preferences_chats__backup_chats_to_external_storage">Sikkerhetskopier samtaler til ekstern lagringsenhet</string>
   <string name="preferences_chats__create_backup">Lag sikkerhetskopi</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Skriv inn passordfrase for sikkerhetskopi</string>
@@ -1160,30 +1174,30 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="BackupUtil_never">Aldri</string>
   <string name="BackupUtil_unknown">Ukjent</string>
   <string name="prompt_passphrase_activity__unlock_signal">Lås opp Signal</string>
-  <string name="preferences_app_protection__screen_lock">Skjerm lås</string>
-  <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Lås signaltilgang med Android skjermlås eller fingeravtrykk</string>
+  <string name="preferences_app_protection__screen_lock">Skjermlås</string>
+  <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Lås Signal med skjermlås eller fingeravtrykk</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">Tidsavbrudd for skjermlås ved inaktivitet.</string>
   <string name="AppProtectionPreferenceFragment_none">Ingen</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Registreringslås-PIN-koden er ikke den samme som SMS-bekreftelseskoden du nettopp har mottatt. Vennligst skriv inn PIN-koden du tidligere konfigurert i programmet.</string>
-  <string name="registration_activity__registration_lock_pin">Registrerings-PIN-kode</string>
+  <string name="registration_activity__registration_lock_pin">Registrerings-PIN</string>
   <string name="registration_activity__forgot_pin">Har du glemt PIN-koden?</string>
   <string name="registration_lock_dialog_view__the_pin_can_consist_of_four_or_more_digits_if_you_forget_your_pin_you_could_be_locked_out_of_your_account_for_up_to_seven_days">PIN-koden kan bestå av fire eller flere sifre. Hvis du glemmer PIN-koden din, kan du bli låst ut av kontoen din i inntil sju dager.</string>
   <string name="registration_lock_dialog_view__enter_pin">Skriv inn PIN-kode</string>
   <string name="registration_lock_dialog_view__confirm_pin">Bekreft PIN-koden</string>
-  <string name="registration_lock_reminder_view__enter_your_registration_lock_pin">Skriv inn registrerings-PIN-kode</string>
+  <string name="registration_lock_reminder_view__enter_your_registration_lock_pin">Skriv inn registrerings-PIN</string>
   <string name="registration_lock_reminder_view__enter_pin">Skriv inn PIN-kode</string>
-  <string name="preferences_app_protection__enable_a_registration_lock_pin_that_will_be_required">Slå på en registrerings-PIN-kode som må tastes inn for å registrere dette telefonnummeret med Signal på nytt.</string>
-  <string name="preferences_app_protection__registration_lock_pin">Registrerings-PIN-kode</string>
+  <string name="preferences_app_protection__enable_a_registration_lock_pin_that_will_be_required">Slå på en registrerings-PIN som må tastes inn for å registrere dette telefonnummeret med Signal på nytt.</string>
+  <string name="preferences_app_protection__registration_lock_pin">Registrerings-PIN</string>
   <string name="preferences_app_protection__registration_lock">Registreringslås</string>
   <string name="RegistrationActivity_you_must_enter_your_registration_lock_PIN">Du må skrive inn registrerings-PIN-koden</string>
-  <string name="RegistrationActivity_incorrect_registration_lock_pin">Feil registrerings-PIN-kode</string>
+  <string name="RegistrationActivity_incorrect_registration_lock_pin">Feil registrerings-PIN</string>
   <string name="RegistrationActivity_too_many_attempts">For mange forsøk</string>
   <string name="RegistrationActivity_you_have_made_too_many_incorrect_registration_lock_pin_attempts_please_try_again_in_a_day">Du har gjort for mange feilaktige registreringslås-PIN-forsøk. Vennligst prøv igjen på en dag.</string>
   <string name="RegistrationActivity_error_connecting_to_service">Feil under tilkobling til tjeneste</string>
   <string name="RegistrationActivity_oh_no">Å nei!</string>
-  <string name="RegistrationActivity_registration_of_this_phone_number_will_be_possible_without_your_registration_lock_pin_after_seven_days_have_passed">Du må vente 7 dager etter at Signal sist ble brukt med dette telefonnummeret før du kan registrere nummeret på nytt uten å taste inn registrerings-PIN-koden. %d dager gjenstår.</string>
-  <string name="RegistrationActivity_registration_lock_pin">Registrerings-PIN-kode</string>
-  <string name="RegistrationActivity_this_phone_number_has_registration_lock_enabled_please_enter_the_registration_lock_pin">Dette telefonnummeret er låst i Signal med registreringslås. Skriv inn registrerings-PIN-koden.</string>
+  <string name="RegistrationActivity_registration_of_this_phone_number_will_be_possible_without_your_registration_lock_pin_after_seven_days_have_passed">Du må vente 7 dager etter at Signal sist ble brukt med dette telefonnummeret før du kan registrere nummeret på nytt uten å taste inn registrerings-PIN. %d dager gjenstår.</string>
+  <string name="RegistrationActivity_registration_lock_pin">Registrerings-PIN</string>
+  <string name="RegistrationActivity_this_phone_number_has_registration_lock_enabled_please_enter_the_registration_lock_pin">Dette telefonnummeret er låst i Signal med registreringslås. Skriv inn registrerings-PIN.</string>
   <string name="RegistrationLockDialog_registration_lock_is_enabled_for_your_phone_number">Telefonnummeret ditt er låst for registrering i Signal med en PIN-kode. Signal ber deg regelmessig om å bekrefte denne koden, slik at du husker den.</string>
   <string name="RegistrationLockDialog_i_forgot_my_pin">Jeg har glemt PIN-koden min.</string>
   <string name="RegistrationLockDialog_forgotten_pin">Har du glemt PIN-koden?</string>
@@ -1196,7 +1210,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="RegistrationLockDialog_disable_registration_lock_pin">Vil du slå av registreringslåsen?</string>
   <string name="RegistrationLockDialog_disable">Slå av</string>
   <string name="RegistrationActivity_continue">Fortsett</string>
-  <string name="preferences_chats__backups">Sikkerhetskopier</string>
+  <string name="preferences_chats__backups">Sikkerhetskopiering</string>
   <string name="prompt_passphrase_activity__signal_is_locked">Signal er låst</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">TRYKK FOR Å LÅSE OPP</string>
   <string name="RegistrationLockDialog_reminder">Påminnelse:</string>
