--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -81,6 +81,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Bericht sturen naar %s</string>
   <string name="ContactsDatabase_signal_call_s">Signal-oproep %s</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">Niet bezorgd</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Sleuteluitwisselingsbericht ontvangen, tik om te verwerken.</string>
@@ -482,6 +484,15 @@ ingevoerd (%s) is ongeldig.</string>
   <string name="RingtonePreference_alarm_sound_default">Standaardwekkergeluid</string>
   <string name="RingtonePreference_add_ringtone_text">Beltoon toevoegen</string>
   <string name="RingtonePreference_unable_to_add_ringtone">Kan aangepaste beltoon niet toevoegen</string>
+  <!--Search-->
+  <string name="SearchFragment_no_results">Geen resultaten gevonden voor \'%s\'</string>
+  <string name="SearchFragment_header_contacts">Contacten</string>
+  <string name="SearchFragment_header_messages">Berichten</string>
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">Uitnodigen voor Signal</string>
+  <string name="SharedContactDetailsActivity_invite_message">Laten we overstappen naar Signal: %1$s</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">Uitnodigen voor Signal</string>
   <!--Slide-->
   <string name="Slide_image">Afbeelding</string>
   <string name="Slide_audio">Audio</string>
@@ -587,6 +598,7 @@ Sleuteluitwisselingsbericht ontvangen voor een verkeerde protocol-versie.</strin
   <string name="MessageNotifier_reply">Reageren</string>
   <string name="MessageNotifier_pending_signal_messages">Signal-berichten in wachtrij</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Er staan Signal-berichten in de wachtrij, tik om ze te openen en op te halen</string>
+  <string name="MessageNotifier_unknown_contact_message">Contactpersoon</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Snel reageren niet beschikbaar wanneer Signal vergrendeld is!</string>
