--- a/res/values-nn/strings.xml
+++ b/res/values-nn/strings.xml
@@ -49,6 +49,7 @@
   <string name="DraftDatabase_Draft_audio_snippet">(lyd)</string>
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(stad)</string>
+  <string name="DraftDatabase_Draft_quote_snippet">(svar)</string>
   <!--AttchmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Fann ingen program for valt medium.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal treng tilgang til lagring for å legga ved bilete, film eller lydklipp, men tilgangen er permanent avslått. Opna app-innstillingsmenyen og vel «Tilgang» – eventuelt «Tillatelser» – og skru på «Lagring».</string>
@@ -81,6 +82,18 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Melding %s</string>
   <string name="ContactsDatabase_signal_call_s">Signal-anrop %s</string>
+  <!--ContactNameEditActivity-->
+  <string name="ContactNameEditActivity_given_name">Fornamn</string>
+  <string name="ContactNameEditActivity_family_name">Etternamn</string>
+  <string name="ContactNameEditActivity_prefix">Prefiks</string>
+  <string name="ContactNameEditActivity_suffix">Suffiks</string>
+  <string name="ContactNameEditActivity_middle_name">Mellomnamn</string>
+  <!--ContactShareEditActivity-->
+  <string name="ContactShareEditActivity_type_home">Heim</string>
+  <string name="ContactShareEditActivity_type_mobile">Mobil</string>
+  <string name="ContactShareEditActivity_type_work">Arbeid</string>
+  <string name="ContactShareEditActivity_type_missing">Anna</string>
+  <string name="ContactShareEditActivity_invalid_contact">Den valde kontakten er ugyldig</string>
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">Ikkje levert</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Melding for nøkkelutveksling motteken. Trykk for å handsama.</string>
@@ -132,6 +145,7 @@
   <string name="ConversationActivity_to_capture_photos_and_video_allow_signal_access_to_the_camera">Gi Signal tilgang til kameraet for å ta bilete eller videoopptak.</string>
   <string name="ConversationActivity_signal_needs_the_camera_permission_to_take_photos_or_video">Signal treng tilgang til kameraet for å ta bilete eller videoar, men tilgangen er permanent avslått. Opna app-innstillingsmenyen og vel «Tilgang» – eventuelt «Tillatelser» – og skru på «Kamera».</string>
   <string name="ConversationActivity_signal_needs_camera_permissions_to_take_photos_or_video">Signal treng tilgang til kameraet for å ta bilete eller videoopptak</string>
+  <string name="ConversationActivity_quoted_contact_message">%1$s%2$s</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d ulesen melding</item>
@@ -487,6 +501,27 @@ Viss du ikkje er ein erfaren brukar, ikkje køyrer ein tredjeparts Android-ROM, 
   <string name="RingtonePreference_alarm_sound_default">Standard alarmlyd</string>
   <string name="RingtonePreference_add_ringtone_text">Legg til ringelyd</string>
   <string name="RingtonePreference_unable_to_add_ringtone">Klarte ikkje legga til eigen ringelyd</string>
+  <!--Search-->
+  <string name="SearchFragment_begin_searching">Tast i veg for å søka etter samtalar, meldingar og kontaktar.</string>
+  <string name="SearchFragment_no_results">Fann ingen resultat for «%s»</string>
+  <string name="SearchFragment_header_conversations">Samtalar</string>
+  <string name="SearchFragment_header_contacts">Kontaktar</string>
+  <string name="SearchFragment_header_messages">Meldingar</string>
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_add_to_contacts">Legg til som kontakt</string>
+  <string name="SharedContactDetailsActivity_invite_to_signal">Inviter til Signal</string>
+  <string name="SharedContactDetailsActivity_invite_message">La oss byta til Signal. %1$s</string>
+  <string name="SharedContactDetailsActivity_new_contact_success">La til kontakt.</string>
+  <string name="SharedContactDetailsActivity_new_contact_failure">Klarte ikkje henta kontakten</string>
+  <string name="SharedContactDetailsActivity_updated_contact_success">Kontakt oppdatert.</string>
+  <string name="SharedContactDetailsActivity_updated_contact_failure">Klarte ikkje redigera kontakten</string>
+  <string name="SharedContactDetailsActivity_initialization_failure">Klarte ikkje lesa kontakten</string>
+  <string name="SharedContactDetailsActivity_add_as_new_contact">Legg til som ny kontakt</string>
+  <string name="SharedContactDetailsActivity_add_to_existing_contact">Legg til ein eksisterande kontakt</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_add_to_contacts">Legg til i kontaktar</string>
+  <string name="SharedContactView_invite_to_signal">Inviter til Signal</string>
+  <string name="SharedContactView_message">Signal-melding</string>
   <!--Slide-->
   <string name="Slide_image">Bilete</string>
   <string name="Slide_audio">Lyd</string>
@@ -592,6 +627,8 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <string name="MessageNotifier_reply">Svar</string>
   <string name="MessageNotifier_pending_signal_messages">Uhenta Signal-meldingar</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Du har uhenta Signal-meldingar, klikk for å opna og henta</string>
+  <string name="MessageNotifier_contact_message">%1$s%2$s</string>
+  <string name="MessageNotifier_unknown_contact_message">Kontakt</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Hurtigsvar er utilgjengeleg når Signal er låst.</string>
@@ -780,6 +817,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <string name="import_fragment__import_a_plaintext_backup_file">Importer klartekst-tryggleikskopi. Dette kan brukast med «SMS Backup &amp; Restore.»</string>
   <!--load_more_header-->
   <string name="load_more_header__see_full_conversation">Vis heile samtalen</string>
+  <string name="load_more_header__loading">Lastar</string>
   <!--media_overview_activity-->
   <string name="media_overview_activity__no_media">Inga media</string>
   <!--message_recipients_list_item-->
@@ -820,6 +858,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Signal-samtale</string>
   <string name="redphone_call_controls__mute">Demp</string>
+  <string name="redphone_call_controls__flip_camera_rear">Bytt kamera</string>
   <string name="redphone_call_controls__signal_call">Signal-anrop</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">TELEFONNUMMER</string>
