--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -64,6 +64,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Порука за %s</string>
   <string name="ContactsDatabase_signal_call_s">Позови %s Сигналом</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">Није испоручена</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Примљена порука размене кључева, тапните за обраду.</string>
@@ -425,6 +427,12 @@
   <string name="RegistrationService_signal_registration_has_encountered_a_problem">Дошло је до проблема приликом пријаве на Сигнал.</string>
   <!--RingtonePreference-->
   <string name="RingtonePreference_ringtone_silent">Ништа</string>
+  <!--Search-->
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">Слање позивнице за Сигнал</string>
+  <string name="SharedContactDetailsActivity_invite_message">Пребацимо се на Сигнал: %1$s</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">Слање позивнице за Сигнал</string>
   <!--Slide-->
   <string name="Slide_image">Слика</string>
   <string name="Slide_audio">Звук</string>
@@ -511,6 +519,7 @@
   <string name="MessageNotifier_mark_read">Означи прочитаним</string>
   <string name="MessageNotifier_media_message">Мултимедијална порука</string>
   <string name="MessageNotifier_reply">Одговори</string>
+  <string name="MessageNotifier_unknown_contact_message">Контакт</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Брзи одговор није доступан ако је Сигнал закључан!</string>
