--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -81,6 +81,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Meddelande %s</string>
   <string name="ContactsDatabase_signal_call_s">Signalsamtal %s</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">Inte levererad</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Tog emot meddelande för nyckelutbyte, tryck för att behandla.</string>
@@ -483,6 +485,15 @@ angav (%s) är ogiltigt.</string>
   <string name="RingtonePreference_alarm_sound_default">Standardalarmljud</string>
   <string name="RingtonePreference_add_ringtone_text">Lägg till ringsignal</string>
   <string name="RingtonePreference_unable_to_add_ringtone">Kunde inte lägga till egen ringsignal</string>
+  <!--Search-->
+  <string name="SearchFragment_no_results">Inga resultat hittades för \'%s\'</string>
+  <string name="SearchFragment_header_contacts">Kontakter</string>
+  <string name="SearchFragment_header_messages">Meddelanden</string>
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">Bjud in till Signal</string>
+  <string name="SharedContactDetailsActivity_invite_message">Byt till Signal: %1$s</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">Bjud in till Signal</string>
   <!--Slide-->
   <string name="Slide_image">Bilder</string>
   <string name="Slide_audio">Ljud</string>
@@ -588,6 +599,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="MessageNotifier_reply">Svara</string>
   <string name="MessageNotifier_pending_signal_messages">Väntande Signal-meddelanden</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Du har väntande Signal-meddelanden, tryck för att öppna och hämta</string>
+  <string name="MessageNotifier_unknown_contact_message">Kontakt</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Snabbsvar är ej tillgängligt när Signal är låst!</string>
