--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -53,6 +53,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">செய்தி %s</string>
   <string name="ContactsDatabase_signal_call_s"> சிக்னல் அழைப்பு %s</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">விநியோகிக்கப்படவில்லை</string>
   <string name="ConversationItem_group_action_left">%1$s இந்தக் குழுவை விட்டு விலகினார்.</string>
@@ -278,6 +280,12 @@
   <string name="RegistrationService_registration_error">பதிவுசெய்தலில்  பிழை</string>
   <!--RingtonePreference-->
   <string name="RingtonePreference_ringtone_silent">எதுவும் இல்லை</string>
+  <!--Search-->
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">சமிக்ஞைக்கு அழை</string>
+  <string name="SharedContactDetailsActivity_invite_message">%1$s: நாம் சமிக்ஞைக்கு மாறுவோம்</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">சமிக்ஞைக்கு அழை</string>
   <!--Slide-->
   <string name="Slide_image">உருவம்</string>
   <string name="Slide_audio">ஒலி</string>
@@ -331,6 +339,7 @@
   <string name="MessageNotifier_mark_read">படித்தாக குறியிடு</string>
   <string name="MessageNotifier_media_message">மீடியா செய்தி</string>
   <string name="MessageNotifier_reply">மறுமொழி கூறு</string>
+  <string name="MessageNotifier_unknown_contact_message">தொடர்பு</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_problem_sending_message">செய்தி அனுப்புவதில் பிரச்சணை!</string>
