--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -10,6 +10,10 @@
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Şu anda: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Hâlâ bir parola belirlememişsiniz!</string>
+  <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
+    <item quantity="one">sohbet başına %d mesaj</item>
+    <item quantity="other">sohbet başına %d mesaj</item>
+  </plurals>
   <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Bütün eski mesajlar silinsin mi?</string>
   <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
     <item quantity="one">Bu işlem tüm sohbetleri en yeni %d mesaja kadar kırpar.</item>
@@ -33,13 +37,19 @@
   <string name="ApplicationPreferencesActivity_off">kapalı</string>
   <string name="ApplicationPreferencesActivity_Off">Kapalı</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
+  <string name="ApplicationPreferencesActivity_privacy_summary">Ekran kilidi %1$s, Kayıt kilidi %2$s</string>
   <string name="ApplicationPreferencesActivity_appearance_summary">Tema %1$s, Dil %2$s</string>
   <!--AppProtectionPreferenceFragment-->
+  <plurals name="AppProtectionPreferenceFragment_minutes">
+    <item quantity="one">%d dakika</item>
+    <item quantity="other">%d dakika</item>
+  </plurals>
   <!--DraftDatabase-->
   <string name="DraftDatabase_Draft_image_snippet">(resim)</string>
   <string name="DraftDatabase_Draft_audio_snippet">(ses)</string>
   <string name="DraftDatabase_Draft_video_snippet">(video)</string>
   <string name="DraftDatabase_Draft_location_snippet">(konum)</string>
+  <string name="DraftDatabase_Draft_quote_snippet">(yanıtla)</string>
   <!--AttchmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Medyayı seçmek için bir uygulama bulunamıyor.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Resim, vidyo veya ses ekleyebilmek için Signal\'a Bellek izni gerekiyor, fakat bu izin temelli rededdilmiştir. Lütfen uygulama ayarlarına devam edip \"İzin\" kısmını seçin, ve \"Bellek\"i etkinleştirin.</string>
@@ -72,6 +82,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">%s Mesaj</string>
   <string name="ContactsDatabase_signal_call_s">%s Signal Araması</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">Gönderilemedi</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">Anahtar takas mesajı alındı, işlemek için dokunun.</string>
@@ -165,6 +177,7 @@
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Siliniyor</string>
   <string name="ConversationFragment_deleting_messages">Mesajlar siliniyor...</string>
+  <string name="ConversationFragment_quoted_message_not_found">Alıntılanmış mesaj bulunamadı</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Cihazınıza yüklü tarayıcı bulunmamaktadır.</string>
   <!--ConversationListFragment-->
@@ -311,6 +324,14 @@
   <string name="InviteActivity_heart_content_description">Erişilebilirlik</string>
   <string name="InviteActivity_invitations_sent">Davetler gönderildi!</string>
   <string name="InviteActivity_invite_to_signal">Signal\'e davet et</string>
+  <plurals name="InviteActivity_send_sms_to_friends">
+    <item quantity="one">%d ARKADAŞINA SMS GÖNDER</item>
+    <item quantity="other">%d ARKADAŞINA SMS GÖNDER</item>
+  </plurals>
+  <plurals name="InviteActivity_send_sms_invites">
+    <item quantity="one">%d SMS daveti gönderilsin mi?</item>
+    <item quantity="other">%d SMS daveti gönderilsin mi?</item>
+  </plurals>
   <string name="InviteActivity_lets_switch_to_signal">Hadi Signal\'e geçelim: %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">Paylaşmak için herhangi bir uygulamanız yok gibi görünüyor.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Arkadaşlar, arkadaşlarının şifresiz sohbet etmesine izin vermez.</string>
@@ -325,6 +346,14 @@
   <string name="MmsDownloader_error_reading_mms_settings">Kablosuz MMS sağlayıcısı ayarları okuma hatası</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Medya</string>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
+    <item quantity="one">Seçilen mesajı sil?</item>
+    <item quantity="other">Seçilen mesajları sil?</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
+    <item quantity="one">Bu işlem seçtiğiniz  mesajı kalıcı olarak silecektir.</item>
+    <item quantity="other">Bu işlem seçtiğiniz %1$d mesajı kalıcı olarak silecektir.</item>
+  </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Siliniyor</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Mesajlar siliniyor...</string>
   <string name="MediaOverviewActivity_Documents">Belgeler</string>
@@ -458,6 +487,15 @@
   <string name="RingtonePreference_alarm_sound_default">Saptanmış alarm sesi</string>
   <string name="RingtonePreference_add_ringtone_text">Zil sesi ekle</string>
   <string name="RingtonePreference_unable_to_add_ringtone">Özel zil sesi eklenemiyor</string>
+  <!--Search-->
+  <string name="SearchFragment_no_results">\'%s\' için hiç sonuç bulunamadı.</string>
+  <string name="SearchFragment_header_contacts">Kişiler</string>
+  <string name="SearchFragment_header_messages">Mesajlar</string>
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">Signal\'e davet et</string>
+  <string name="SharedContactDetailsActivity_invite_message">Hadi Signal\'e geçelim: %1$s</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">Signal\'e davet et</string>
   <!--Slide-->
   <string name="Slide_image">Resim</string>
   <string name="Slide_audio">Ses</string>
@@ -548,6 +586,7 @@ Geçersiz protokol sürümünde anahtar değişim mesajı alındı.</string>
   <string name="MediaPreviewActivity_signal_needs_the_storage_permission_in_order_to_write_to_external_storage_but_it_has_been_permanently_denied">Signal, harici depolama birimine kaydedebilmek için Depolama iznini gerektirir, ancak izin kalıcı olarak reddedilmiş. Lütfen uygulama ayarları menüsüne geçin, \"İzinler\" i seçin ve \"Depolama\" yı etkinleştirin.</string>
   <string name="MediaPreviewActivity_unable_to_write_to_external_storage_without_permission">İzinler olmadan harici depolama birimine kayıt yapılamıyor</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_title">Mesajı sil?</string>
+  <string name="MediaPreviewActivity_media_delete_confirmation_message">Bu işlem bu mesajı kalıcı olarak silecektir.</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d yeni mesaj %2$d sohbetten</string>
   <string name="MessageNotifier_most_recent_from_s">En yeni mesaj: %1$s</string>
@@ -562,12 +601,14 @@ Geçersiz protokol sürümünde anahtar değişim mesajı alındı.</string>
   <string name="MessageNotifier_reply">Cevapla</string>
   <string name="MessageNotifier_pending_signal_messages">Bekleyen Signal mesajları</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">Bekleyen Signal mesajlarınız var, almak ve aömak için dokunun</string>
+  <string name="MessageNotifier_unknown_contact_message">Kişi</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">Signal kilitlendiğinde hızlı cevap kullanılamaz!</string>
   <string name="QuickResponseService_problem_sending_message">Mesaj gönderilirken hata!</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_open_directory">Dizini aç</string>
+  <string name="SaveAttachmentTask_saved_to">%se kaydedildi</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Ara</string>
   <!--SingleRecipientNotificationBuilder-->
@@ -683,10 +724,30 @@ Geçersiz protokol sürümünde anahtar değişim mesajı alındı.</string>
   <string name="experience_upgrade_preference_fragment__enable_read_receipts">Okundu bilgisini etkinleştir</string>
   <!--expiration-->
   <string name="expiration_off">Kapalı</string>
+  <plurals name="expiration_seconds">
+    <item quantity="one">%d saniye</item>
+    <item quantity="other">%d saniye</item>
+  </plurals>
   <string name="expiration_seconds_abbreviated">%ds</string>
+  <plurals name="expiration_minutes">
+    <item quantity="one">%d dakika</item>
+    <item quantity="other">%d dakika</item>
+  </plurals>
   <string name="expiration_minutes_abbreviated">%dd</string>
+  <plurals name="expiration_hours">
+    <item quantity="one">%d saat</item>
+    <item quantity="other">%d saat</item>
+  </plurals>
   <string name="expiration_hours_abbreviated">%ds</string>
+  <plurals name="expiration_days">
+    <item quantity="one">%d gün</item>
+    <item quantity="other">%d gün</item>
+  </plurals>
   <string name="expiration_days_abbreviated">%dg</string>
+  <plurals name="expiration_weeks">
+    <item quantity="one">%d hafta</item>
+    <item quantity="other">%d hafta</item>
+  </plurals>
   <string name="expiration_weeks_abbreviated">%dh</string>
   <!--unverified safety numbers-->
   <string name="IdentityUtil_unverified_banner_one">%s ile güvenlik numaranız değişti ve artık doğrulanmış değil.</string>
@@ -966,6 +1027,7 @@ Geçersiz protokol sürümünde anahtar değişim mesajı alındı.</string>
   <string name="conversation_context__menu_delete_message">Mesajı sil</string>
   <string name="conversation_context__menu_forward_message">Mesajı yönlendir</string>
   <string name="conversation_context__menu_resend_message">Mesajı tekrar gönder</string>
+  <string name="conversation_context__menu_reply_to_message">Mesajı yanıtla</string>
   <!--conversation_context_image-->
   <string name="conversation_context_image__save_attachment">Eki kaydet</string>
   <!--conversation_expiring_off-->
@@ -1024,6 +1086,10 @@ Geçersiz protokol sürümünde anahtar değişim mesajı alındı.</string>
   <string name="verify_display_fragment_context_menu__compare_with_clipboard">Pano ile karşılaştır</string>
   <!--reminder_header-->
   <string name="reminder_header_outdated_build">Signal sürümünüz eski kalmış</string>
+  <plurals name="reminder_header_outdated_build_details">
+    <item quantity="one">Signal sürümünüz %d gün içinde kullanım dışı kalacak. En yeni sürüme güncellemek için dokunun.</item>
+    <item quantity="other">Signal sürümünüz %d gün içinde kullanım dışı kalacak. En yeni sürüme güncellemek için dokunun.</item>
+  </plurals>
   <string name="reminder_header_outdated_build_details_today">Signal sürümünüz bugün kullanım dışı kalacak. En yeni sürüme güncellemek için dokunun.</string>
   <string name="reminder_header_expired_build">Signal sürümünüz kullanım dışı kaldı!</string>
   <string name="reminder_header_expired_build_details">Mesajlarınız artık başarılı olarak gönderilemez. En yeni sürüme güncellemek için dokunun.</string>
@@ -1073,32 +1139,74 @@ Geçersiz protokol sürümünde anahtar değişim mesajı alındı.</string>
   <string name="registration_activity__restore_backup">Yedeği geri yükle</string>
   <string name="registration_activity__skip">Atla</string>
   <string name="registration_activity__register">Kayıt ol</string>
+  <string name="preferences_chats__chat_backups">Sohbet yedekleri</string>
+  <string name="preferences_chats__backup_chats_to_external_storage">Sohbetleri harici depolamaya yedekle</string>
   <string name="preferences_chats__create_backup">Yedek yarat</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Yedek parolası gir</string>
   <string name="RegistrationActivity_restore">Geri yükle</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Geçersiz yedek parolası</string>
   <string name="RegistrationActivity_checking">Kontrol ediliyor...</string>
+  <string name="RegistrationActivity_d_messages_so_far">Şu ana kadar %d mesaj....</string>
   <string name="RegistrationActivity_restore_from_backup">Yedekten geri yüklensin mi?</string>
+  <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Mesajlarınızı ve medyanızı yerel bir yedekten resotre edin. Eğer şimdi restore etmezseniz, daha sonra edemeyeceksiniz.</string>
   <string name="RegistrationActivity_backup_size_s">Yedek boyutu: %s</string>
   <string name="RegistrationActivity_backup_timestamp_s">Yedek zaman damgası: %s</string>
   <string name="BackupDialog_enable_local_backups">Yerel yedekler etkinleştirilsin mi?</string>
   <string name="BackupDialog_enable_backups">Yedekler etkinleştirilsin mi?</string>
+  <string name="BackupDialog_please_acknowledge_your_understanding_by_marking_the_confirmation_check_box">Lütfen onay kutusunu işaretleyerek anlayışınızı kabul edin.</string>
   <string name="BackupDialog_delete_backups">Yedekleri sil?</string>
+  <string name="BackupDialog_disable_and_delete_all_local_backups">Tüm yerel yedekler devre dışı bırakıp silinsin mi?</string>
   <string name="BackupDialog_delete_backups_statement">Yedekleri sil</string>
   <string name="BackupDialog_copied_to_clipboard">Panoya kopyalandı</string>
+  <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal, yedekleme yapmak için depolama iznine ihtiyaç duyuyor, ancak izin kalıcı olarak reddedilmiş. Lütfen uygulama ayarları menüsüne geçin, \"İzinler\" i seçin ve \"Depolama\" yı etkinleştirin.</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Son yedek: %s</string>
+  <string name="ChatsPreferenceFragment_in_progress">işlem devam etmektedir</string>
+  <string name="LocalBackupJob_creating_backup">Yedek oluşturuluyor...</string>
+  <string name="ProgressPreference_d_messages_so_far">Şimdiye kadar %d mesaj</string>
+  <string name="RegistrationActivity_verify_s">Doğrula %s</string>
+  <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Lütfen doğrulama kodunu girin ve %se gönderin.</string>
+  <string name="RegistrationActivity_wrong_number">Yanlış numara?</string>
+  <string name="RegistrationActivity_call_me_instead">Bunun yerine beni ara</string>
+  <string name="RegistrationActivity_available_in">Mevcut:\u0020</string>
   <string name="BackupUtil_never">Asla</string>
   <string name="BackupUtil_unknown">Bilinmeyen</string>
   <string name="prompt_passphrase_activity__unlock_signal">Signal\'ı Kilitle\'yi sonlandır</string>
+  <string name="preferences_app_protection__screen_lock">Ekran kilidi</string>
+  <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Android ekran kilidi veya parmak izi ile Kilit Signal erişimi</string>
+  <string name="preferences_app_protection__screen_lock_inactivity_timeout">ekran kilidi, hareketsizlik zaman aşımı</string>
   <string name="AppProtectionPreferenceFragment_none">Hiçbiri</string>
+  <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Şifreniz size gönderilen doğrulama koduyla aynı değildir. Lütfen kayıt olurken oluşturduğunuz şifrenizi giriniz.  </string>
+  <string name="registration_activity__registration_lock_pin">Kayıt Kilit PIN i</string>
+  <string name="registration_activity__forgot_pin">PIN i mi unuttun?</string>
+  <string name="registration_lock_dialog_view__the_pin_can_consist_of_four_or_more_digits_if_you_forget_your_pin_you_could_be_locked_out_of_your_account_for_up_to_seven_days">Pin 4 veya daha fazla rakam içerebilir. Eğer şifrenizi unutursanız, hesabınız 7 güne kadar kilitlenebilir. </string>
+  <string name="registration_lock_dialog_view__enter_pin">Şifrenizi giriniz</string>
+  <string name="registration_lock_dialog_view__confirm_pin">Şifrenizi doğrulayınız</string>
+  <string name="registration_lock_reminder_view__enter_your_registration_lock_pin">Şifrenizi giriniz. </string>
+  <string name="registration_lock_reminder_view__enter_pin">Şifrenizi giriniz </string>
+  <string name="preferences_app_protection__registration_lock_pin">Kayıt Kilit PIN i</string>
   <string name="preferences_app_protection__registration_lock">Kayıt kilitli</string>
+  <string name="RegistrationActivity_you_must_enter_your_registration_lock_PIN">Şifrenizi giriniz</string>
+  <string name="RegistrationActivity_incorrect_registration_lock_pin">Yanlış şifre </string>
   <string name="RegistrationActivity_too_many_attempts">Çok fazla deneme</string>
+  <string name="RegistrationActivity_you_have_made_too_many_incorrect_registration_lock_pin_attempts_please_try_again_in_a_day">Birden fazla yanlış şifre girdiniz. Lütfen başka bir gün tekrar deneyiniz. </string>
+  <string name="RegistrationActivity_error_connecting_to_service">Bağlantı sırasında hatayla karşılaşıldı</string>
+  <string name="RegistrationActivity_oh_no">Hayır! </string>
+  <string name="RegistrationActivity_registration_lock_pin">Kayıt kilidi pini</string>
+  <string name="RegistrationActivity_this_phone_number_has_registration_lock_enabled_please_enter_the_registration_lock_pin">Bu telefon numarası şifrelidir. Lütfen şifreyi giriniz. </string>
+  <string name="RegistrationLockDialog_i_forgot_my_pin">Şifremi unuttum. </string>
+  <string name="RegistrationLockDialog_forgotten_pin">Şifrenizi mi unuttunuz?</string>
+  <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">Şifreniz, yetkisiz kişilerin telefon numaranıza erişimini engellemeye destek olmaktadır. Bu özelliği istediğiniz zaman \'\'Signal\'\' güvenlik ayarlarından etkisiz hale getirebilirsiniz. </string>
   <string name="RegistrationLockDialog_registration_lock">Kayıt kilitli</string>
   <string name="RegistrationLockDialog_enable">Etkinleştir</string>
+  <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_four_digits">Şifreniz en az 4 rakam içermelidir. </string>
+  <string name="RegistrationLockDialog_the_two_pins_you_entered_do_not_match">Girmiş olduğunuz şifreler uyuşmamaktadır. </string>
+  <string name="RegistrationLockDialog_error_connecting_to_the_service">Bağlantı sırasında hatayla karşılaşıldı</string>
+  <string name="RegistrationLockDialog_disable_registration_lock_pin">Kayıt kilidi PIN\'i kapatılsın mı?</string>
   <string name="RegistrationLockDialog_disable">Devre dışı bırak</string>
   <string name="RegistrationActivity_continue">Devam Et</string>
   <string name="preferences_chats__backups">Yedekler</string>
   <string name="prompt_passphrase_activity__signal_is_locked">Signal kilitli</string>
+  <string name="prompt_passphrase_activity__tap_to_unlock">Kilidi açmak için dokununuz! </string>
   <string name="RegistrationLockDialog_reminder">Hatırlatma:</string>
   <string name="recipient_preferences__about">Hakkında</string>
   <!--EOF-->
