--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -78,6 +78,8 @@
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">信息 %s</string>
   <string name="ContactsDatabase_signal_call_s">暗号呼叫 %s</string>
+  <!--ContactNameEditActivity-->
+  <!--ContactShareEditActivity-->
   <!--ConversationItem-->
   <string name="ConversationItem_error_not_delivered">未送达</string>
   <string name="ConversationItem_received_key_exchange_message_tap_to_process">已收到密钥交换信息，点击以开始处理。</string>
@@ -465,6 +467,15 @@
   <string name="RingtonePreference_alarm_sound_default">默认提示音</string>
   <string name="RingtonePreference_add_ringtone_text">添加来电铃声</string>
   <string name="RingtonePreference_unable_to_add_ringtone">无法添加个人来点铃声</string>
+  <!--Search-->
+  <string name="SearchFragment_no_results">没有找到关于“%s”的信息</string>
+  <string name="SearchFragment_header_contacts">联系人</string>
+  <string name="SearchFragment_header_messages">信息</string>
+  <!--SharedContactDetailsActivity-->
+  <string name="SharedContactDetailsActivity_invite_to_signal">邀请至暗号</string>
+  <string name="SharedContactDetailsActivity_invite_message">让我们切换到暗号： %1$s</string>
+  <!--SharedContactView-->
+  <string name="SharedContactView_invite_to_signal">邀请至暗号</string>
   <!--Slide-->
   <string name="Slide_image">图片</string>
   <string name="Slide_audio">音频</string>
@@ -569,6 +580,7 @@
   <string name="MessageNotifier_reply">回复</string>
   <string name="MessageNotifier_pending_signal_messages">暗号信息待处理</string>
   <string name="MessageNotifier_you_have_pending_signal_messages">您有待处理的信号消息，轻触来打开和收取</string>
+  <string name="MessageNotifier_unknown_contact_message">联系人</string>
   <!--MmsPreferencesFragment-->
   <!--QuickResponseService-->
   <string name="QuickResponseService_quick_response_unavailable_when_Signal_is_locked">当暗号处于锁定状态时，快速回复不可用！</string>
